Minor updates/corrections.

--- a/habbsed-dibformat-word-ms.Rmd
+++ b/habbsed-dibformat-word-ms.Rmd
@@ -100,7 +100,7 @@ spec_tbl %>%
 
 # Data Description
 
-This dataset consists of raw environmental DNA (eDNA) reads from before and during a *Microcystis* bloom.  We sequenced the DNA using the ONT MinION, and classified them taxonomically using the ONT What's In My Pot (WIMP) pipeline.  The complete dataset (all reads passing MinION QC) numbered `r samp_dat %>% pull(read_qcpass) %>% sum() %>% scales::comma()` reads. Of these, `r samp_dat %>% pull(reads_classified) %>% sum() %>% scales::comma()` were successfully taxonomically classified.
+This dataset consists of raw environmental DNA (eDNA) reads from before and during a *Microcystis* bloom.  We sequenced the DNA using the ONT MinION, and classified the reads taxonomically using the ONT What's In My Pot (WIMP) pipeline.  The complete dataset (all reads passing MinION QC) numbered `r samp_dat %>% pull(read_qcpass) %>% sum() %>% scales::comma()` reads. Of these, `r samp_dat %>% pull(reads_classified) %>% sum() %>% scales::comma()` were successfully taxonomically classified.
 Table 1 provides a subset of the metadata associated with these samples, including the GLERL from which the sample was drawn, the date of sampling, bloom condition at the time of sampling, and DNA concentration. Because we sequenced some samples as a single run, and others as part of a multiplexed run, the multiplexing information is also included. The complete metadata is available on the SRA BioProject page.
 
 \small
@@ -126,7 +126,7 @@ read_csv(here::here("data/manifest.csv"), col_types="cDccccciciiic") %>%
 
 The results of the taxonomic classification are presented in figure \ref{fig:taxa}. There was notable human and *E. coli* contamination present in several samples that was not revealed until taxonomic classification. While we took steps to track down and eliminate the contamination for later samples, we were unable to conclusively discover the source. Based on the quantities observed in the negative controls and reagent blanks, these included at minimum, 1,400 to several thousand reads classifying as *E. coli*, and from 50 to several hundred reads classifying as *H. sapiens*, and hundreds more classifying to other taxa, including *Shigella*, *Acinetobacter*, and *Microcystis* (though never more than 10 reads in any of the blanks or negative control). In some of the bloom-drawn samples (those from GLERL WE13) the abundance of *E. coli* was greater than that of *Microcystis* despite the fact that these were *Microcystis* blooms. These contaminants could therefore have had a skewing effect on the abundance results.
 
-```{r taxa, echo = FALSE, warning= FALSE, messsage = FALSE, fig.cap="Stacked bar charts of relative taxon abundance (genus level) for all samples in the dataset. Top 10 most abundant genera across all samples are displayed. All other genera were classed as 'Other'. Sample names are the GLERL from which the sample was drawn, the condition (Bloom or Pre-bloom) and the replicate number. Reagent blank and negative control results are also inlcuded (right 3 columns). Note the presence of \\textit{Escherichia} and \\textit{Homo} classified reads  (putative contamination) across all samples.", fig.align='center', out.width="8in"}
+```{r taxa, echo = FALSE, warning= FALSE, messsage = FALSE, fig.cap="Relative taxon abundance (genus level) for all samples in the dataset. Top 10 most abundant genera across all samples are displayed. All other genera were classed as 'Other'. Sample names are the GLERL from which the sample was drawn, the condition (Bloom or Pre-bloom) and the replicate number. Reagent blank and negative control results are also inlcuded (right 3 columns). Note the presence of \\textit{Escherichia} and \\textit{Homo} classified reads  (putative contamination) across all samples.", fig.align='center', out.width="8in"}
 
 
 cols <- c("Acinetobacter" = "purple", 
